--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -162,15 +162,15 @@ function Day() {
       if (localStorage.getItem("HealthNum") < 300) {
         localStorage.setItem("Health", "poor");
         if (Math.percentChance(50)) {
-          if (localStorage.getItem("K3sick");) {
-            if (localStorage.getItem("K3died");) {
-              if (localStorage.getItem("k2sick");) {
-                if (localStorage.getItem("K2died");) {
-                  if (localStorage.getItem("K1sick");) {
-                    if (localStorage.getItem("K1died");) {
-                      if (localStorage.getItem("Wsick");) {
-                        if (localStorage.getItem("Wdied");) {
-                          if (localStorage.getItem("Isick");) {
+          if (localStorage.getItem("K3sick")) {
+            if (localStorage.getItem("K3died")) {
+              if (localStorage.getItem("k2sick")) {
+                if (localStorage.getItem("K2died")) {
+                  if (localStorage.getItem("K1sick")) {
+                    if (localStorage.getItem("K1died")) {
+                      if (localStorage.getItem("Wsick")) {
+                        if (localStorage.getItem("Wdied")) {
+                          if (localStorage.getItem("Isick")) {
                             alert("All_Of_The_People_In_Your_Party_Have_Died");
                             localStorage.clear();
                             window.location.assign("https://0038509gd.github.io/Greg.com/Gregames");
@@ -255,15 +255,15 @@ function Day() {
         if (localStorage.getItem("HealthNum") < 200) {
           localStorage.setItem("Health", "very-poor");
           if (Math.percentChance(25)) {
-          if (localStorage.getItem("K3sick");) {
-            if (localStorage.getItem("K3died");) {
-              if (localStorage.getItem("k2sick");) {
-                if (localStorage.getItem("K2died");) {
-                  if (localStorage.getItem("K1sick");) {
-                    if (localStorage.getItem("K1died");) {
-                      if (localStorage.getItem("Wsick");) {
-                        if (localStorage.getItem("Wdied");) {
-                          if (localStorage.getItem("Isick");) {
+          if (localStorage.getItem("K3sick")) {
+            if (localStorage.getItem("K3died")) {
+              if (localStorage.getItem("k2sick")) {
+                if (localStorage.getItem("K2died")) {
+                  if (localStorage.getItem("K1sick")) {
+                    if (localStorage.getItem("K1died")) {
+                      if (localStorage.getItem("Wsick")) {
+                        if (localStorage.getItem("Wdied")) {
+                          if (localStorage.getItem("Isick")) {
                             alert("All_Of_The_People_In_Your_Party_Have_Died");
                             localStorage.clear();
                             window.location.assign("https://0038509gd.github.io/Greg.com/Gregames");
