--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -12,26 +12,15 @@
 <body3 popover id="box"><input type="text" id="box"><button onclick="Stop();">Enter</button></body3><br>
 <script>
 document.getElementById('Foodlb').innerHTML = localStorage.getItem("Foodlb");
-var Day = localStorage.getItem("Day");
-  document.getElementById('Day').innerHTML = Day;
-var Month = localStorage.getItem("Month");
-  document.getElementById('Month').innerHTML = Month;
-var Year = localStorage.getItem("Year");
-  document.getElementById('Year').innerHTML = Year;
-var Wheather = localStorage.getItem("Wheather");
-  document.getElementById('Wheather').innerHTML = Wheather;
-var Health = localStorage.getItem("Health");
-  document.getElementById('Health').innerHTML = Health;
-var HealthNum = localStorage.getItem("HealthNum");
-var miles2LM = ([num}miles-next-landmark);
-  document.getElementById('miles2LM').innerHTML = miles2LM;
-var milesD = localStorage.getItem("milesD");
-  document.getElementById('milesD').innerHTML = milesD;
-var Pace = localStorage.getItem("Pace");
-var hr = localStorage.getItem("hr");
-var Rations = localStorage.getItem("Rations");
-var FPD = localStorage.getItem("FPD");
-if (((milesD = 0||(milesD = 305||milesD = 641))||((milesD = 1190||milesD = 1487)||milesD = 1702))) {
+document.getElementById('Day').innerHTML = localStorage.getItem("Day");
+document.getElementById('Month').innerHTML = localStorage.getItem("Month");
+document.getElementById('Year').innerHTML = localStorage.getItem("Year");
+document.getElementById('Wheather').innerHTML = localStorage.getItem("Wheather");
+document.getElementById('Health').innerHTML = localStorage.getItem("Health");
+var miles2LM = "([num}miles-next-landmark)";
+document.getElementById('miles2LM').innerHTML = miles2LM;
+document.getElementById('milesD').innerHTML = localStorage.getItem("milesD");
+if (((localStorage.getItem("milesD") = 0||(localStorage.getItem("milesD") = 305||localStorage.getItem("milesD") = 641))||((localStorage.getItem("milesD") = 1190||localStorage.getItem("milesD") = 1487)||localStorage.getItem("milesD") = 1702))) {
  document.getElementById('lm').innerHTML = "Buy_Supplies";
 } else {
  document.getElementById('lm').innerHTML = "Hunt_For_Food(Comming_Soon!)";
@@ -50,92 +39,89 @@ function Change(name, number) {
   localStorage.setItem(name, localStorage.getItem(name) + number);
 }
 function Run() {
-  if (FPD == 3) {
+  if (localStorage.getItem("FPD") == 3) {
     Change("HealthNum", 1);
-  } else if (FPD == 2) {
+  } else if (localStorage.getItem("FPD") == 2) {
     Change("HealthNum", -5);
-  } else if (FPD == 1) {
+  } else if (localStorage.getItem("FPD") == 1) {
     Change("HealthNum", -10);
   }
   Change("Day", 1);
-  if (Day == "28") {
-    if (Month == 2) {
-      var Day = 1;
+  if (localStorage.getItem("Day") == "28") {
+    if (localStorage.getItem("Month"); == 2) {
+      localStorage.setItem("Day", 1);
       Change("Month", 1);
     }
-  } else if (Day == 30) {
-    if ((Month == 4||Month == 6)||(Month == 9||Month == 11)) {
-      var Day = 1;
+  } else if (localStorage.getItem("Day") == 30) {
+    if ((localStorage.getItem("Month") == 4||localStorage.getItem("Month") == 6)||(localStorage.getItem("Month") == 9||localStorage.getItem("Month") == 11)) {
+      localStorage.setItem("Day", 1);
       Change("Month", 1);
     } 
-  } else if (Day == 31) {
-    if ((Month == 1||Month == 3)||((Momth == 5||Month == 7)||(Month == 8||Month == 10))) {
-      var Day = 1;
+  } else if (localStorage.getItem("Day") == 31) {
+    if ((localStorage.getItem("Month") == 1||localStorage.getItem("Month") == 3)||((localStorage.getItem("Month") == 5||localStorage.getItem("Month") == 7)||(localStorage.getItem("Month") == 8||localStorage.getItem("Month") == 10))) {
+      localStorage.setItem("Day", 1);
       Change("Month", 1);
-    } else if (Month = 12) {
-      var Day = 1;
-      var Month = 1;
+    } else if (localStorage.getItem("Month") = 12) {
+      localStorage.setItem("Day", 1);
+      localStorage.setItem("Month", 1);
+      Change("Year", 1);
     } 
   }
-    if (Month = 1||Month = 2) {
+    if (localStorage.getItem("Month") = 1||localStorage.getItem("Month") = 2) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "snowy";
+      localStorage.setItem("Wheather", "snowy");
     } else if (Randomizer = 2) {
-      var Wheather = "very-cold";
+      localStorage.setItem("Wheather", "very-cold");
     } else if (Randomizer = 3) {
-      var Wheather = "cold";
+      localStorage.setItem("Wheather", "cold");
     }
-  } else if (Month = 3||Month = 4) {
+  } else if (localStorage.getItem("Month") = 3||localStorage.getItem("Month") = 4) {
     var Randomizer = randint(1, 4);
     if (Randomizer = 1) {
-      var Wheather = "cold";
+      localStorage.setItem("Wheather", "cold");
     } else if (Randomizer = 2) {
-      var Wheather = "cool";
+      localStorage.setItem("Wheather", "cool");
     } else if (Randomizer = 3) {
-      var Wheather = "rainy";
+      localStorage.setItem("Wheather", "rainy");
     } else if (Randomizer = 4) {
-      var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     }
-  } else if (Month = 5||Month = 6) {
+  } else if (localStorage.getItem("Month") = 5||localStorage.getItem("Month") = 6) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "rainy";
+      localStorage.setItem("Wheather", "rainy");
     } else if (Randomizer = 2) {
-      var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     } else if (Randomizer = 3) {
-      var Wheather = "hot";
+      localStorage.setItem("Wheather", "hot");
     }
-  } else if (Month = 7||Month = 8) {
+  } else if (localStorage.getItem("Month") = 7||localStorage.getItem("Month") = 8) {
     var Randomizer = randint(1, 5);
-    if (Randomizer = 1) {
-      var Wheather = "hot";
-    } else if (Randomizer = 2) {
-      var Wheather = "hot";
-    } else if (Randomizer = 3) {
-      var Wheather = "warm";
-    } else if (Randomizer = 4) {
-      var Wheather = "warm";
+    if ((Randomizer = 1||Randomizer = 2)) {
+      localStorage.setItem("Wheather", "hot");
+    } else if ((Randomizer = 3||Randomizer = 4)) {
+      localStorage.setItem("Wheather", "warm");
     } else if (Randomizer = 5) {
-      var Wheather = "cool";
+      localStorage.setItem("Wheather", "cool");
     }
-  } else if (Month = 9||Month = 10) {
+  } else if (localStorage.getItem("Month") = 9||localStorage.getItem("Month") = 10) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "cold";
+      localStorage.setItem("Wheather", "cold");
     } else if (Randomizer = 2) {
-      var Wheather = "cool";
+      localStorage.setItem("Wheather", "cool");
     } else if (Randomizer = 3) {
-      var Wheather = "warm";
+      localStorage.setItem("Wheather", "warm");
     }
-  } else if (Month = 11||Month = 12) {
+  } else if (localStorage.getItem("Month") = 11||localStorage.getItem("Month") = 12) {
     var Randomizer = randint(1, 3);
     if (Randomizer = 1) {
-      var Wheather = "cold";
+      localStorage.setItem("Wheather", "cold");
     } else if (Randomizer = 2) {
-      var Wheather = "very-cold";
+      localStorage.setItem("Wheather", "very-cold");
     } else if (Randomizer = 3) {
-      var Wheather = "snowy";
+      localStorage.setItem("Wheather", "snowy");
     }
   }
   if (localStorage.getItem("Wheather") = "hot") {
@@ -149,14 +135,14 @@ function Run() {
   } else if (localStorage.getItem("Wheather") = "snowy") {
     Change("HealthNum", -(20 - localStorage.getItme("Clothing")));
   }
-  if (HealthNum > 400) {
-    var Health = "good";
-    if (HelathNum < 500) {
-      var Health = "fair";
-      if (HealthNum < 300) {
-        var Health = "poor";
+  if (localStorage.getItem("HealthNum") > 400) {
+    localStorage.setItem("Health", "good");
+    if (localStorage.getItem("HealthNum") < 500) {
+      localStorage.setItem("Health", "fair");
+      if (localStorage.getItem("HealthNum") < 300) {
+        localStorage.setItem("Health", "poor");
         if (Math.percentChance(50)) {
-          if (K3sick) {
+          if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
               if (localStorage.getItem("k2sick")) {
                 if (localStorage.getItem("K2died")) {
@@ -243,13 +229,13 @@ function Run() {
             } else if (Randomizer = 4) {
               alert(localStorage.getItem("K3") + "_Broke_Their_Leg");
             }
-            var K3sick = true;
+            localStorage.setItem("K3sick", true)
           }
         }
-        if (HealthNum < 200) {
-          var Health = "very-poor";
+        if (localStorage.getItem("HealthNum"); < 200) {
+          localStorage.setItem("Health", "very-poor");
           if (Math.percentChance(25)) {
-          if (K3sick) {
+          if (localStorage.getItem("K3sick")) {
             if (localStorage.getItem("K3died")) {
               if (localStorage.getItem("k2sick")) {
                 if (localStorage.getItem("K2died")) {
@@ -336,7 +322,7 @@ function Run() {
             } else if (Randomizer = 4) {
               alert(localStorage.getItem("K3") + "_Broke_Their_Leg");
             }
-            var K3sick = true;
+            localStorage.setItem("K3sick", true)
           }
         }
         }
@@ -345,14 +331,14 @@ function Run() {
   }
 }
 function Maintain() {
-  document.getElementById('Foodlb').innerHTML = Foodlb;
-  document.getElementById('Day').innerHTML = Day;
-  document.getElementById('Month').innerHTML = Month;
-  document.getElementById('Year').innerHTML = Year;
-  document.getElementById('Wheather').innerHTML = Wheather;
-  document.getElementById('Health').innerHTML = Health;
+  document.getElementById('Foodlb').innerHTML = localStorage.getItem("Foodlb");
+  document.getElementById('Day').innerHTML = localStorage.getItem("Day");
+  document.getElementById('Month').innerHTML = localStorage.getItem("Month");
+  document.getElementById('Year').innerHTML = localStorage.getItem("Year");
+  document.getElementById('Wheather').innerHTML = localStorage.getItem("Wheather");
+  document.getElementById('Health').innerHTML = localStorage.getItem("Health");
   document.getElementById('miles2LM').innerHTML = miles2LM;
-  document.getElementById('milesD').innerHTML = milesD;
+  document.getElementById('milesD').innerHTML = localStorage.getItem("milesD");
 }
 function kill() {
   Change("Oxen", -1);
@@ -360,7 +346,7 @@ function kill() {
   Maintain();
 }
 function difine() {
-  if (((milesD = 0||(milesD = 305||milesD = 641))||((milesD = 1190||milesD = 1487)||milesD = 1702))) {
+  if (((localStorage.getItem("milesD") = 0||(localStorage.getItem("milesD") = 305||localStorage.getItem("milesD") = 641))||((localStorage.getItem("milesD") = 1190||localStorage.getItem("milesD") = 1487)||localStorage.getItem("milesD") = 1702))) {
     window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Shop");
   } else {
     
