--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -9,6 +9,9 @@
 <button onclick="Day();">5</button> Whait_To_See_If_Conditions_Improove
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Fording-Explained"><button>4</button></a> Find_Out_What_These_Options_Mean<br>
 <script>
+function Change(name, number) {
+  localStorage.setItem(name, localStorage.getItem(name) + number);
+}
 if (localStorage.getItem("River") = "Kanses") {
   localStorage.setItem("Depth", 3.5);
 } else if (localStorage.getItem("River") = "BigBlue") {
@@ -19,53 +22,53 @@ if (localStorage.getItem("River") = "Kanses") {
   localStorage.setItem("Depth", 5);
 }
 if (localStorage.getItem("Wheather") = "hot") {
-  localStorage.setItem("Depth", localStorage.getItem("Depth") - 2);
+  Change("Depth", -2);
 } else if (localStorage.getItem("Wheather") = "warm") {
-  localStorage.setItem("Depth", localStorage.getItem("Depth") + 3);
+  Change("Depth", 3);
 } else if (localStorage.getItem("Wheather") = "cool") {
-  localStorage.setItem("Depth", localStorage.getItem("Depth") + 2.5);
+  Change("Depth", 2.5);
 } else if (localStorage.getItem("Wheather") = "cold") {
-  localStorage.setItem("Depth", localStorage.getItem("Depth") + 2);
+  Change("Depth", 2);
 } else if (localStorage.getItem("Wheather") = "very-cold") {
-  localStorage.setItem("Depth", localStorage.getItem("Depth") - 1.5);
+  Change("Depth", -1.5);
 } else if (localStorage.getItem("Wheather") = "rainy") {
-  localStorage.getItem("Depth", localStorage.getItem("Depth") + 3.5);
+  Change("Depth", 3.5);
 } else if (localStorage.getItem("Wheather") = "snowy") {
-  localStorage.getItem("Depth", localStorage.getItem("Depth") + 1);
+  Change("Depth", 1);
 }
-documant.getElementById('Depth').innerHTML = Depth
+documant.getElementById('Depth').innerHTML = localStorage.getItem("Depth");
 function Day() {
   if (localStorage.getItem("FPD") == 3) {
-    localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") + 4);
+    Change("HealthNum", 10);
   } else if (localStorage.getItem("FPD") == 2) {
-    localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") + 6);
+    Change("HealthNum", 4);
   } else if (localStorage.getItem("FPD") == 1) {
-    localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") + 10);
+    Change("HealthNum", 1);
   }
-  localStorage.setItem("Foodlb", localStorage.getItem("Foodlb") - localStorage.getItem("FPD"));
+  Change("Foodlb", -(localStorage.getItem("FPD")));
   if (localStorage.getItem("Foodlb") < 0) {
-    localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") + localStorage.getItem("Foodlb"));
+    Change("HealthNum", localStorage.getItem("Foodlb"));
     localStorage.setItem("Foodlb", 0);
   }
-  localStorage.setItem("Day", localStorage.getItem("Day") + 1);
+  Change("Day", 1);
   if (localStorage.getItem("Day") == 28) {
     if (localStorage.getItem("Month") == 2) {
       localStorage.setItem("Day", 1);
-      localStorage.setItem("Month", localStorage.getItem("Month") + 1);
+      Change("Month", 1);
     }
   } else if (localStorage.getItem("Day") == 30) {
     if ((localStorage.getItem("Month") == 4||localStorage.getItem("Month") == 6)||(localStorage.getItem("Month") == 9||localStorage.getItem("Month") == 11)) {
       localStorage.setItem("Day", 1);
-      localStorage.setItem("Month", localStorage.getItem("Month") + 1);
+      Change("Month", 1);
     } 
   } else if (localStorage.getItem("Day") == 31) {
     if ((localStorage.getItem("Month") == 1||localStorage.getItem("Month") == 3)||((localStorage.getItem("Month") == 5||localStorage.getItem("Month") == 7)||(localStorage.getItem("Month") == 8||localStorage.getItem("Month") == 10))) {
       localStorage.setItem("Day", 1);
-      localStorage.setItem("Month", localStorage.getItem("Month") + 1);
+      Change("Month", 1);
     } else if (localStorage.getItem("Month") = 12) {
       localStorage.setItem("Day", 1);
       localStorage.setItem("Month", 1);
-      localStorage.setItem("Year", localStorage.getItem("Year") + 1);
+      Change("Year", 1);
     } 
   }
     if (localStorage.getItem("Month") = 1||localStorage.getItem("Month") = 2) {
@@ -130,9 +133,9 @@ function Day() {
     }
     }
   if (localStorage.getItem("Wheather") = "hot") {
-    localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") - randint(1, 2));
+    Change("HealthNum", randint(-2, -1));
   } else if (localStorage.getItem("Wheather") = "cold") {
-    localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") - (randint(10, 15) - localStorage.getItem("Clothing")));
+    Change("HealthNum", -(randint(10, 15) - localStorage.getItem("Clothing")));
   } else if (localStorage.getItem("Wheather") = "very-cold") {
     localStorage.setItem("HealthNum", localStorage.getItem("HealthNum") - (randint(15, 20) - localStorage.getItem("Clothing")));
   } else if (localStorage.getItem("Wheather") = "rainy") {
