--- a/Gregames/OregonTrail/RiverCrossing.html
+++ b/Gregames/OregonTrail/RiverCrossing.html
@@ -38,6 +38,7 @@ function Maintain() {
   document.getElementById("Toungues").innerHTML = localStorage.getItem("Toungues");
   document.getElementById("Wheels").innerHTML = localStorage.getItem("Wheels");
   documant.getElementById("Health").innerHTML = localStorage.getItem("Health");
+  document.getElementById("Wheather").innerHTML = localStorage.getItem("Wheather");
   documant.getElementById("Pace").innerHTML = localStorage.getItem("Pace");
   documant.getElementById("Rations").innerHTML = localStorage.getItem("Rations");
   documant.getElementById("milesD").innerHTML = localStorage.getItem("milesD");
