--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -11,15 +11,48 @@
 <button onclick="kill();">9</button> Kill_Ox_For_Food
 <body3 popover id="box"><input type="text" id="box"><button onclick="Stop();">Enter</button></body3><br>
 <script>
-document.getElementById('Foodlb').innerHTML = localStorage.getItem("Foodlb");
-document.getElementById('Day').innerHTML = localStorage.getItem("Day");
-document.getElementById('Month').innerHTML = localStorage.getItem("Month");
-document.getElementById('Year').innerHTML = localStorage.getItem("Year");
-document.getElementById('Wheather').innerHTML = localStorage.getItem("Wheather");
-document.getElementById('Health').innerHTML = localStorage.getItem("Health");
-var miles2LM = "([num}miles-next-landmark)";
-document.getElementById('miles2LM').innerHTML = miles2LM;
-document.getElementById('milesD').innerHTML = localStorage.getItem("milesD");
+function Change(name, action, num, type) {
+  if (action = "+/-") {
+    localStorage.setItem(name, localStorage.getItem(name) + num);
+  } else if (action = "round") {
+    if (type = "up") {
+      localStorage.setItem(name, Math.ceil(localStorage.getItem(name)));
+    } else if (type = "down") {
+      localStorage.setItem(name, Math.floor(localStorage.getItem(name)));
+    } else {
+      localStorage.setItem(name, Math.round(localStorage.getItem(name)));
+    }
+  } else if (action = "Exp") {
+    localStorage.setItem(name, Math.pow(localStorage.getItem(name), num));
+  } else if (action = "root") {
+    localStorage.setItem(name, Math.pow(localStorge.getItem(name), 1/num));
+  }
+}
+function randint(a, b) {
+  return Math.random() * b + a;
+}
+function Maintain() {
+  document.getElementById("Oxen").innerHTML = loaclStorage.getItem("Oxen");
+  document.getElementById("Foodlb").innerHTML = localStorage.getItem("Foodlb");
+  document.getElementById("Clothing").innerHTML = localStorage.getItem("Clothing");
+  document.getElementById("Ammo").innerHTML = localStorage.getItem("Ammo");
+  document.getElementById("Axels").innerHTML = localStorage.getItem("Axels");
+  document.getElementById("Toungues").innerHTML = localStorage.getItem("Toungues");
+  document.getElementById("Wheels").innerHTML = localStorage.getItem("Wheels");
+  documant.getElementById("Health").innerHTML = localStorage.getItem("Health");
+  document.getElementById("Wheather").innerHTML = localStorage.getItem("Wheather");
+  documant.getElementById("Pace").innerHTML = localStorage.getItem("Pace");
+  documant.getElementById("Rations").innerHTML = localStorage.getItem("Rations");
+  documant.getElementById("milesD").innerHTML = localStorage.getItem("milesD");
+  documant.getElementById("miles2LM").innerHTML = localStorage.getItem("miles2LM");
+}
+function getInfo(name, action) {
+  if (action = "abselute") {
+    return Math.abs(localStorage.getItem(name));
+  } else if (action = "signe") {
+    return Math.signe(localStorage.getItem(name));
+  }
+}
 if (((localStorage.getItem("milesD") = 0||(localStorage.getItem("milesD") = 305||localStorage.getItem("milesD") = 641))||((localStorage.getItem("milesD") = 1190||localStorage.getItem("milesD") = 1487)||localStorage.getItem("milesD") = 1702))) {
  document.getElementById('lm').innerHTML = "Buy_Supplies";
 } else {
@@ -35,36 +68,33 @@ function Day() {
   Run();
   Maintain();
 }
-function Change(name, number) {
-  localStorage.setItem(name, localStorage.getItem(name) + number);
-}
 function Run() {
   if (localStorage.getItem("FPD") == 3) {
-    Change("HealthNum", 1);
+    Change("HealthNum", "+/-", 1);
   } else if (localStorage.getItem("FPD") == 2) {
-    Change("HealthNum", -5);
+    Change("HealthNum", "+/-", -5);
   } else if (localStorage.getItem("FPD") == 1) {
-    Change("HealthNum", -10);
+    Change("HealthNum", "+/-", -10);
   }
-  Change("Day", 1);
+  Change("Day", "+/-", 1);
   if (localStorage.getItem("Day") == "28") {
     if (localStorage.getItem("Month"); == 2) {
       localStorage.setItem("Day", 1);
-      Change("Month", 1);
+      Change("Month", "+/-", 1);
     }
   } else if (localStorage.getItem("Day") == 30) {
     if ((localStorage.getItem("Month") == 4||localStorage.getItem("Month") == 6)||(localStorage.getItem("Month") == 9||localStorage.getItem("Month") == 11)) {
       localStorage.setItem("Day", 1);
-      Change("Month", 1);
+      Change("Month", "+/-", 1);
     } 
   } else if (localStorage.getItem("Day") == 31) {
     if ((localStorage.getItem("Month") == 1||localStorage.getItem("Month") == 3)||((localStorage.getItem("Month") == 5||localStorage.getItem("Month") == 7)||(localStorage.getItem("Month") == 8||localStorage.getItem("Month") == 10))) {
       localStorage.setItem("Day", 1);
-      Change("Month", 1);
+      Change("Month", "+/-", 1);
     } else if (localStorage.getItem("Month") = 12) {
       localStorage.setItem("Day", 1);
       localStorage.setItem("Month", 1);
-      Change("Year", 1);
+      Change("Year", "+/-", 1);
     } 
   }
     if (localStorage.getItem("Month") = 1||localStorage.getItem("Month") = 2) {
@@ -125,15 +155,15 @@ function Run() {
     }
   }
   if (localStorage.getItem("Wheather") = "hot") {
-    Change("HealthNum", randint(-2, -1));
+    Change("HealthNum", "+/-", randint(-2, -1));
   } else if (localStorage.getItem("Wheather") = "cold") {\
-    Change("HealthNum", -(randint(10, 15) - localStorage.getItem("Clothing")));
+    Change("HealthNum", "+/-", -(randint(10, 15) - localStorage.getItem("Clothing")));
   } else if (localStorage.getItem("Wheather") = "very-cold") {
-    Change("HealthNum", -(randint(15, 20) - localStorage.getItem("Clothing")));
+    Change("HealthNum", "+/-", -(randint(15, 20) - localStorage.getItem("Clothing")));
   } else if (localStorage.getItem("Wheather") = "rainy") {
-    Change("HealthNum", -(randint(5, 10) - localStorage.getItem("Clothing")));
+    Change("HealthNum", "+/-", -(randint(5, 10) - localStorage.getItem("Clothing")));
   } else if (localStorage.getItem("Wheather") = "snowy") {
-    Change("HealthNum", -(20 - localStorage.getItme("Clothing")));
+    Change("HealthNum", "+/-", -(20 - localStorage.getItme("Clothing")));
   }
   if (localStorage.getItem("HealthNum") > 400) {
     localStorage.setItem("Health", "good");
@@ -330,19 +360,9 @@ function Run() {
     }
   }
 }
-function Maintain() {
-  document.getElementById('Foodlb').innerHTML = localStorage.getItem("Foodlb");
-  document.getElementById('Day').innerHTML = localStorage.getItem("Day");
-  document.getElementById('Month').innerHTML = localStorage.getItem("Month");
-  document.getElementById('Year').innerHTML = localStorage.getItem("Year");
-  document.getElementById('Wheather').innerHTML = localStorage.getItem("Wheather");
-  document.getElementById('Health').innerHTML = localStorage.getItem("Health");
-  document.getElementById('miles2LM').innerHTML = miles2LM;
-  document.getElementById('milesD').innerHTML = localStorage.getItem("milesD");
-}
 function kill() {
-  Change("Oxen", -1);
-  Change("Foodlb", 150);
+  Change("Oxen", "+/-", -1);
+  Change("Foodlb", "+/-", 150);
   Maintain();
 }
 function difine() {
